<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_purchase"
            android:icon="@drawable/ic_bag"
            android:title="@string/purchase" />
        <item
            android:id="@+id/nav_wish"
            android:icon="@drawable/ic_star_border"
            android:title="@string/wishlist" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_outline"
                android:title="@string/help" />
        </menu>
    </item>


    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_login"
        android:title="@string/login"
        android:visible="false"/>
    <item
        android:id="@+id/nav_register"
        android:icon="@drawable/ic_register"
        android:title="@string/register"
        android:visible="false"/>
</menu>
