<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/forty">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="monospace"
        android:layout_centerHorizontal="true"
        android:id="@+id/txt_phone_confirmation_header"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:layout_below="@+id/txt_phone_confirmation_header"
        android:id="@+id/txt_phone_confirmation_header_mini"
        android:text="@string/please_type_the_verification_code_sent_to"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_phone_confirmation_header_mini"
        android:id="@+id/txt_phone_confirmation_header_number"
        android:layout_centerHorizontal="true"
        android:hint="@string/custom_number"/>
    <com.github.glomadrian.codeinputlib.CodeInput
        android:layout_below="@+id/txt_phone_confirmation_header_number"
        android:layout_marginTop="@dimen/twenty"
        android:layout_width="@dimen/one_hundred_forty"
        android:layout_height="wrap_content"
        app:underline_color="#457ad1"
        app:underline_selected_color="#9e1ace"
        app:text_color="#b12eff"
        app:hint_color="#77ce9d"
        app:hint_text="Pin code"
        app:codes="4"
        android:layout_centerHorizontal="true"
        android:id="@+id/ci_phone_confirmation_ed"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:layout_below="@+id/ci_phone_confirmation_ed"
        android:id="@+id/txt_phone_confirmation_footer_caption"
        android:layout_centerHorizontal="true"
        android:hint="@string/wrong_number"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/seven"
        android:layout_below="@+id/txt_phone_confirmation_footer_caption"
        android:id="@+id/txt_phone_confirmation_footer_notreceivesms"
        android:layout_centerHorizontal="true"
        android:hint="@string/didn_t_receive_message"
        android:textSize="15sp"/>

</RelativeLayout>