<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:windowSoftInputMode="adjustResize"
    tools:context="id.my.asmith.babli.ui.auth.LoginActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/et_auth_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/name_user"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:padding="20dp"
            android:theme="@style/PrimaryFocus"/>

        <EditText
            android:id="@+id/et_auth_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:padding="20dp"
            android:theme="@style/PrimaryFocus"/>

        <EditText
            android:id="@+id/et_auth_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:padding="20dp"
            android:layout_marginTop="5dp"
            android:theme="@style/PrimaryFocus" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.hbb20.CountryCodePicker
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/spn_auth_register_spcode"
                app:ccp_countryPreference="ID"/>

            <EditText
                android:layout_toRightOf="@+id/spn_auth_register_spcode"
                android:id="@+id/et_auth_register_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/phone"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:padding="20dp"
                android:theme="@style/PrimaryFocus" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btn_auth_register_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txt_auth_register_cplogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_caption"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</RelativeLayout>
