<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.auth.RegisterActivity"
    android:id="@+id/NestedScroll"
    tools:showIn="@layout/activity_register"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/one_hundred"
            android:layout_height="@dimen/one_hundred"
            android:id="@+id/img_auth_register_logo"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_auth_register_logo"
            android:id="@+id/lay_auth_register_laymain"
            android:layout_marginTop="@dimen/twenty">
            <EditText
                android:id="@+id/et_auth_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:hint="@string/name_user"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:padding="@dimen/twenty"
                android:theme="@style/PrimaryFocus"/>

            <EditText
                android:id="@+id/et_auth_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/email"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:padding="@dimen/twenty"
                android:theme="@style/PrimaryFocus"/>

            <EditText
                android:id="@+id/et_auth_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:padding="@dimen/twenty"
                android:layout_marginTop="@dimen/five"
                android:theme="@style/PrimaryFocus" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.hbb20.CountryCodePicker
                    android:layout_width="@dimen/one_hundred_twenty_five"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:id="@+id/spn_auth_register_spcode"
                    app:ccp_countryPreference="ID"/>

                <EditText
                    android:layout_toRightOf="@+id/spn_auth_register_spcode"
                    android:id="@+id/et_auth_register_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:padding="@dimen/twenty"
                    android:theme="@style/PrimaryFocus" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_below="@+id/lay_auth_register_laymain">

            <Button
                android:id="@+id/btn_auth_register_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/txt_auth_register_cplogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/login_caption"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginBottom="@dimen/ten"
                android:gravity="center"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
