<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.auth.LoginActivity"
    android:id="@+id/NestedScroll"
    tools:showIn="@layout/activity_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/one_hundred"
            android:layout_height="@dimen/one_hundred"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/twenty_five"
            android:id="@+id/img_auth_login_logo" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_below="@id/img_auth_login_logo"
            android:id="@+id/lay_auth_login_laymain">

            <EditText
                android:id="@+id/et_auth_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/email"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:padding="@dimen/twenty"
                android:theme="@style/PrimaryFocus"/>

            <EditText
                android:id="@+id/et_auth_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:padding="@dimen/twenty"
                android:layout_marginTop="@dimen/five"
                android:theme="@style/PrimaryFocus" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten">
                <TextView
                    android:id="@+id/txt_auth_login_cgpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_below="@+id/lay_auth_login_laymain">

            <Button
                android:id="@+id/btn_auth_login_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/txt_auth_login_cpregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/register_caption"
                android:layout_marginTop="@dimen/fifteen"
                android:layout_marginBottom="@dimen/fifteen"
                android:gravity="center"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
